# project-management-mvp

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  compose.yaml  pyproject.toml
.claude/: ralph-loop.local.md
backend/: AGENTS.md  ai.py  chat.py  database.py  main.py
backend/tests/: conftest.py  e2e_app.py  test_ai.py  test_ai_live.py  test_app.py  test_chat.py  test_database.py
docs/: BOARD_API.md  CHAT_API.md  DATABASE_DESIGN.md  PLAN.md  code_review.md  database-schema.json  hld_design.md  lld_design.md  ralph_hld.md  ralph_lld.md  review.md  sample-board.json  usertestplan.md
frontend/: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  playwright.config.ts
frontend/src/app/: globals.css
frontend/src/components/: AuthApp.test.tsx  AuthApp.tsx  BoardSwitcher.tsx  ChatSidebar.test.tsx  ChatSidebar.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanCardPreview.tsx  KanbanColumn.tsx  LabelManager.tsx  NewCardForm.tsx
frontend/src/lib/: api.test.ts  api.ts  chat.test.ts  chat.ts  kanban.test.ts  kanban.ts
frontend/src/test/: boardFixture.ts
frontend/tests/: kanban.spec.ts
scripts/: AGENTS.md  start.ps1  start.sh  stop.ps1  stop.sh
