[project]
name = "project-management-mvp"
version = "0.1.0"
description = "Local project management MVP"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "openai>=2.46.0",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "httpx2",
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
markers = [
    "live: makes an explicitly enabled request to the OpenAI API",
]

[tool.uv]
package = false
